--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.17.3",
+    "nodemon": "^2.0.15",
+    "pg-promise": "^10.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -15,7 +18,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:nodemon": "nodemon index.js",
+    "db:create": "createdb mv_todo_app",
+    "db:destroy": "dropdb mv_todo_app",
+    "db:init": "psql -f commands.sql mv_todo_app",
+    "db:seed": "psql -f seed.sql likeypixdb",
+    "db:reset": "npm run db:destroy; npm run db:create && npm run db:init"
   },
   "eslintConfig": {
     "extends": [
