--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "db:create": "createdb mv_todo_app",
-    "db:destroy": "dropdb mv_todo_app",
-    "db:init": "psql -f commands.sql mv_todo_app",
-    "db:seed": "psql -f seed.sql likeypixdb",
+    "db:create": "createdb react_blog",
+    "db:destroy": "dropdb react_blog",
+    "db:init": "psql -f schema.sql react_blog",
+    "db:seed": "psql -f seed.sql react_blog",
     "db:reset": "npm run db:destroy; npm run db:create && npm run db:init"
   },
   "eslintConfig": {
